syntax = "proto3";

package pb;

message BodyReq {
  uint32 ReqIdentifier = 1;
  string Token = 2;
  string SendID = 3;
  string MsgIncr = 4;
  bytes Data = 5;
}

message BodyResp {
  uint32 ReqIdentifier = 1;
  string MsgIncr = 2;
  uint32 ErrCode = 3;
  string ErrMsg = 4;
  bytes Data = 5;
}
